[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "marshy"
authors = [
    {name = "Tim O'Farrell", email = "tofarr@gmail.com"},
]
description = "A convention over configuration approach to object marshalling."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing-inspect~=0.7",
    "injecty~=0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tofarr/marshy"

[project.optional-dependencies]
dev = [
    "black~=23.3",
    "marshmallow-dataclass~=8.5",
    "pytest~=7.2",
    "pytest-cov~=4.0",
    "pytest-xdist~=3.2",
    "pylint~=3.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["marshy", "injecty_config_marshy"]